--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "fastapi api for saas-blog site"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "alembic>=1.16.4",
     "fastapi[standard]>=0.116.1",
     "httpx>=0.28.1",
     "passlib[bcrypt]>=1.7.4",
