--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "aiofiles>=24.1.0",
     "aiosqlite>=0.21.0",
     "alembic>=1.16.4",
+    "asgi-lifespan>=2.1.0",
     "asyncpg>=0.30.0",
     "fastapi[standard]>=0.116.1",
     "httpx>=0.28.1",
@@ -19,4 +20,5 @@ dependencies = [
     "python-jose[cryptography]>=3.5.0",
     "python-multipart>=0.0.20",
     "sqlmodel>=0.0.24",
+    "trio>=0.30.0",
 ]
