--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "alembic>=1.16.4",
     "asgi-lifespan>=2.1.0",
     "asyncpg>=0.30.0",
+    "fastapi-limiter>=0.1.6",
     "fastapi[standard]>=0.116.1",
     "httpx>=0.28.1",
     "passlib[bcrypt]>=1.7.4",
