--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,12 @@ dependencies = [
     "alembic>=1.16.4",
     "asgi-lifespan>=2.1.0",
     "asyncpg>=0.30.0",
+    "black>=25.1.0",
     "fakeredis[lua]>=2.31.0",
     "fastapi-limiter>=0.1.6",
     "fastapi[standard]>=0.116.1",
     "httpx>=0.28.1",
+    "isort>=6.0.1",
     "passlib[bcrypt]>=1.7.4",
     "pyjwt>=2.10.1",
     "pyproject-toml>=0.1.0",
