--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "fakeredis[lua]>=2.31.0",
     "fastapi-limiter>=0.1.6",
     "fastapi[standard]>=0.116.1",
+    "gunicorn>=23.0.0",
     "httpx>=0.28.1",
     "isort>=6.0.1",
     "passlib[bcrypt]>=1.7.4",
