--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "alembic>=1.16.4",
     "asgi-lifespan>=2.1.0",
     "asyncpg>=0.30.0",
+    "bcrypt==4.0.1",
     "black>=25.1.0",
     "fakeredis[lua]>=2.31.0",
     "fastapi-limiter>=0.1.6",
