🧹 Seperated main.py into different module and made code modular and Formatted codes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "isort>=6.0.1",
     "nanoid>=2.0.0",
     "passlib[bcrypt]>=1.7.4",
+    "pydantic-settings>=2.10.1",
     "pyjwt>=2.10.1",
     "pyproject-toml>=0.1.0",
     "pytest>=8.4.1",
