--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
     "python-dotenv>=1.1.1",
     "python-jose[cryptography]>=3.5.0",
     "python-multipart>=0.0.20",
-    "slugify>=0.0.1",
+    "python-slugify>=8.0.4",
     "sqlmodel>=0.0.24",
     "sse-starlette>=3.0.2",
     "trio>=0.30.0",
