--- a/requirements.txt
+++ b/requirements.txt
@@ -22,8 +22,10 @@ attrs==25.3.0
     # via
     #   outcome
     #   trio
-bcrypt==4.3.0
-    # via passlib
+bcrypt==4.0.1
+    # via
+    #   saas-blog-api (pyproject.toml)
+    #   passlib
 black==25.1.0
     # via saas-blog-api (pyproject.toml)
 certifi==2025.8.3
@@ -132,16 +134,17 @@ pydantic==2.11.7
     # via
     #   fastapi
     #   fastapi-cloud-cli
+    #   pydantic-settings
     #   pyproject-toml
     #   sqlmodel
 pydantic-core==2.33.2
     # via pydantic
+pydantic-settings==2.11.0
+    # via saas-blog-api (pyproject.toml)
 pygments==2.19.2
     # via
     #   pytest
     #   rich
-pyjwt==2.10.1
-    # via saas-blog-api (pyproject.toml)
 pyproject-toml==0.1.0
     # via saas-blog-api (pyproject.toml)
 pytest==8.4.1
@@ -153,6 +156,7 @@ pytest-asyncio==1.1.0
 python-dotenv==1.1.1
     # via
     #   saas-blog-api (pyproject.toml)
+    #   pydantic-settings
     #   uvicorn
 python-jose==3.5.0
     # via saas-blog-api (pyproject.toml)
@@ -160,6 +164,8 @@ python-multipart==0.0.20
     # via
     #   saas-blog-api (pyproject.toml)
     #   fastapi
+python-slugify==8.0.4
+    # via saas-blog-api (pyproject.toml)
 pyyaml==6.0.2
     # via uvicorn
 redis==6.4.0
@@ -186,8 +192,6 @@ shellingham==1.5.4
     # via typer
 six==1.17.0
     # via ecdsa
-slugify==0.0.1
-    # via saas-blog-api (pyproject.toml)
 sniffio==1.3.1
     # via
     #   anyio
@@ -207,6 +211,8 @@ sse-starlette==3.0.2
     # via saas-blog-api (pyproject.toml)
 starlette==0.47.3
     # via fastapi
+text-unidecode==1.3
+    # via python-slugify
 trio==0.30.0
     # via saas-blog-api (pyproject.toml)
 typer==0.16.1
@@ -225,7 +231,9 @@ typing-extensions==4.15.0
     #   typer
     #   typing-inspection
 typing-inspection==0.4.1
-    # via pydantic
+    # via
+    #   pydantic
+    #   pydantic-settings
 urllib3==2.5.0
     # via sentry-sdk
 uvicorn==0.35.0
