--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,9 @@ dependencies = [
     "isort>=6.0.1",
     "nanoid>=2.0.0",
     "passlib[bcrypt]>=1.7.4",
+    "psycopg2-binary>=2.9.11",
     "pydantic-settings>=2.10.1",
+    "pyjwt>=2.10.1",
     "pyproject-toml>=0.1.0",
     "pytest>=8.4.1",
     "pytest-asyncio>=1.1.0",
@@ -28,7 +30,9 @@ dependencies = [
     "python-jose[cryptography]>=3.5.0",
     "python-multipart>=0.0.20",
     "python-slugify>=8.0.4",
+    "slugify>=0.0.1",
     "sqlmodel>=0.0.24",
     "sse-starlette>=3.0.2",
     "trio>=0.30.0",
+    "aiosmtplib>=3.0.0",
 ]
